...
                            final arabicCharRegex = RegExp(r'[\u0600-\u06FF]');
                            if (value == null || value.isEmpty) {
                              return 'يرجى إدخال البريد الإلكتروني';
                            } else if (arabicCharRegex.hasMatch(value)) {
                              return 'لا يسمح باستخدام الأحرف العربية في البريد الإلكتروني';
                            } else if (!value.contains('@')) {
                              return 'يرجى إدخال بريد إلكتروني صحيح';
                            } else if (_emailError != null) {
                              return _emailError;
                            }
                            return null;
                          },
                          onChanged: (value) {
...
                          },
                          validator: (value) {
                            if (value == null || value.isEmpty) {
                              return 'يرجى إدخال كلمة المرور';
                            }
                            if (value.length < 8) {
                              return 'يجب أن تتكون كلمة المرور من 8 خانات على الأقل';
                            }
                            if (value.length > 15) {
                              return 'يجب ألا تزيد كلمة المرور عن 15 خانة';
                            }
                            bool hasLetter = value.contains(RegExp(r'[a-zA-Z]'));
                            bool hasNumber = value.contains(RegExp(r'[0-9]'));
...
                          },
                          validator: (value) {
                            if (controller.passwordController.text.isNotEmpty) {
                              if (value == null || value.isEmpty) {
                                return 'يرجى تأكيد كلمة المرور';
                              } else if (value != controller.passwordController.text) {
                                return 'كلمتا المرور غير متطابقتين';
                              }
                            }
                            return null;
                          },
                        ),
                        const SizedBox(height: 30),
                        // continue button
                        _buildButton(
                          text: 'متابعة',
                          onPressed: () async {
                            if (_formKey.currentState!.validate()) {
                              setState(() {
                                _emailError = null;
                              });

...
