class InitialPageModel {
  final String welcomeText = 'مرحبًا بك!';
  final String signUpButtonText = 'الانضمام إلى منهل';
  final String loginButtonText = 'تسجيل الدخول';
  final String logoPath = 'assets/images/logo.png';
}

